Bug 462663 - Height of tags edit field shrunken since landing of tags autocomplete feature, r=dao,gavin a=beltzner
UltraBlame original commit: 5bc95a37a77b8e59a9b9d7a6b3b0481ab8816f94

--- a/toolkit/themes/gnomestripe/global/autocomplete.css
+++ b/toolkit/themes/gnomestripe/global/autocomplete.css
@@ -616,7 +616,36 @@ autocomplete
 :
 *
 /
+/
+*
+.
+padded
+is
+used
+by
+autocomplete
+widgets
+that
+don
+'
+t
+have
+an
+icon
+.
+Gross
+.
+-
+dwh
+*
+/
 textbox
+:
+not
+(
+.
+padded
+)
 {
 cursor
 :
@@ -675,61 +704,6 @@ color
 red
 ;
 }
-/
-*
-Used
-by
-autocomplete
-widgets
-that
-don
-'
-t
-have
-an
-icon
-.
-Gross
-.
--
-dwh
-*
-/
-textbox
-.
-padded
-{
-padding
--
-top
-:
-1px
-;
-padding
--
-bottom
-:
-1px
-;
--
-moz
--
-padding
--
-start
-:
-2px
-;
--
-moz
--
-padding
--
-end
-:
-0px
-;
-}
 .
 autocomplete
 -
@@ -773,6 +747,13 @@ menulist
 textfield
 ;
 }
+textbox
+:
+not
+(
+.
+padded
+)
 .
 textbox
 -
@@ -785,6 +766,14 @@ margin
 0
 3px
 ;
+}
+.
+textbox
+-
+input
+-
+box
+{
 -
 moz
 -
