--- a/toolkit/themes/pinstripe/global/autocomplete.css
+++ b/toolkit/themes/pinstripe/global/autocomplete.css
@@ -614,7 +614,36 @@ autocomplete
 :
 *
 /
+/
+*
+.
+padded
+is
+used
+by
+autocomplete
+widgets
+that
+don
+'
+t
+have
+an
+icon
+.
+Gross
+.
+-
+dwh
+*
+/
 textbox
+:
+not
+(
+.
+padded
+)
 {
 cursor
 :
@@ -646,38 +675,13 @@ color
 red
 ;
 }
-/
-*
-Used
-by
-autocomplete
-widgets
-that
-don
-'
-t
-have
-an
-icon
-.
-Gross
-.
--
-dwh
-*
-/
 textbox
+:
+not
+(
 .
 padded
-{
-padding
-:
-1px
-0px
-1px
-2px
-;
-}
+)
 .
 textbox
 -
@@ -690,6 +694,14 @@ margin
 0
 3px
 ;
+}
+.
+textbox
+-
+input
+-
+box
+{
 -
 moz
 -
