--- a/toolkit/themes/winstripe/global/autocomplete.css
+++ b/toolkit/themes/winstripe/global/autocomplete.css
@@ -616,7 +616,36 @@ autocomplete
 :
 *
 /
+/
+*
+.
+padded
+is
+used
+by
+autocomplete
+widgets
+that
+don
+'
+t
+have
+an
+icon
+.
+Gross
+.
+-
+dwh
+*
+/
 textbox
+:
+not
+(
+.
+padded
+)
 {
 cursor
 :
@@ -648,61 +677,6 @@ color
 red
 ;
 }
-/
-*
-Used
-by
-autocomplete
-widgets
-that
-don
-'
-t
-have
-an
-icon
-.
-Gross
-.
--
-dwh
-*
-/
-textbox
-.
-padded
-{
-padding
--
-top
-:
-1px
-;
-padding
--
-bottom
-:
-1px
-;
--
-moz
--
-padding
--
-start
-:
-2px
-;
--
-moz
--
-padding
--
-end
-:
-0px
-;
-}
 .
 autocomplete
 -
@@ -720,6 +694,13 @@ align
 center
 ;
 }
+textbox
+:
+not
+(
+.
+padded
+)
 .
 textbox
 -
@@ -732,6 +713,14 @@ margin
 0
 3px
 ;
+}
+.
+textbox
+-
+input
+-
+box
+{
 -
 moz
 -
