--- a/browser/themes/winstripe/browser/places/organizer-aero.css
+++ b/browser/themes/winstripe/browser/places/organizer-aero.css
@@ -443,3 +443,57 @@ color
 EEF3FA
 ;
 }
+/
+*
+*
+*
+*
+Vista
+default
+theme
+:
+Library
+'
+s
+search
+box
+needs
+to
+be
+vertically
+centered
+*
+*
+*
+*
+/
+#
+searchFilter
+:
+-
+moz
+-
+system
+-
+metric
+(
+windows
+-
+default
+-
+theme
+)
+{
+padding
+-
+top
+:
+3px
+;
+padding
+-
+bottom
+:
+2px
+;
+}
