Bug 461710 - Write an automated test to ensure that visited link coloring is turned off in private browsing mode (further fixes); r=dietrich (NPOTB)
UltraBlame original commit: 1899ea13f9e7f20b4915937b60dd62f00229ecf0

--- a/toolkit/components/places/tests/mochitest/test_bug_461710.html
+++ b/toolkit/components/places/tests/mochitest/test_bug_461710.html
@@ -326,7 +326,9 @@ html
 /
 1
 "
-link_page
+visited_page
+-
+2
 .
 html
 "
@@ -334,7 +336,9 @@ html
 /
 2
 "
-link_page
+visited_page
+-
+3
 .
 html
 "
@@ -349,6 +353,26 @@ html
 /
 /
 4
+"
+link_page
+-
+2
+.
+html
+"
+/
+/
+5
+"
+link_page
+-
+3
+.
+html
+"
+/
+/
+6
 ]
 ;
 var
@@ -404,6 +428,28 @@ break
 case
 2
 :
+/
+/
+nothing
+to
+do
+here
+break
+;
+case
+3
+:
+/
+/
+nothing
+to
+do
+here
+break
+;
+case
+4
+:
 ok
 (
 !
@@ -431,7 +477,7 @@ mode
 break
 ;
 case
-3
+5
 :
 pb
 .
@@ -465,7 +511,7 @@ mode
 break
 ;
 case
-4
+6
 :
 pb
 .
@@ -567,6 +613,46 @@ case
 :
 /
 /
+nothing
+to
+do
+here
+we
+just
+want
+to
+mark
+the
+page
+as
+visited
+break
+;
+case
+3
+:
+/
+/
+nothing
+to
+do
+here
+we
+just
+want
+to
+mark
+the
+page
+as
+visited
+break
+;
+case
+4
+:
+/
+/
 run
 outside
 of
@@ -637,7 +723,7 @@ mode
 break
 ;
 case
-3
+5
 :
 /
 /
@@ -713,7 +799,7 @@ mode
 break
 ;
 case
-4
+6
 :
 /
 /
@@ -911,18 +997,8 @@ subtests
 length
 )
 {
-setTimeout
-(
-function
-(
-)
-{
 loadNextTest
 (
-)
-;
-}
-500
 )
 ;
 }
