Adjust expected results based on http://lists.w3.org/Archives/Public/www-style/2008Nov/0190.html and add tests for format().  (Bug 457821)
UltraBlame original commit: 6e2fda0521f80c2972c43df78b0c925c3728ff66

--- a/layout/reftests/font-face/order-1-ref.html
+++ b/layout/reftests/font-face/order-1-ref.html
@@ -103,7 +103,7 @@ font
 family
 :
 "
-MarkD
+MarkA
 "
 ;
 src
@@ -115,7 +115,7 @@ url
 /
 fonts
 /
-markD
+markA
 .
 ttf
 )
@@ -127,7 +127,9 @@ font
 -
 family
 :
-MarkD
+"
+MarkA
+"
 ;
 }
 <
@@ -144,7 +146,7 @@ body
 <
 p
 >
-DBC
+ABC
 <
 /
 p
