--- a/layout/reftests/font-face/order-2-ref.html
+++ b/layout/reftests/font-face/order-2-ref.html
@@ -103,7 +103,7 @@ font
 family
 :
 "
-MarkD
+MarkA
 "
 ;
 src
@@ -115,19 +115,75 @@ url
 /
 fonts
 /
-markD
+markA
 .
 ttf
 )
 ;
 }
-body
+font
+-
+face
 {
 font
 -
 family
 :
-MarkD
+"
+Mark2B
+"
+;
+src
+:
+url
+(
+.
+.
+/
+fonts
+/
+mark2B
+.
+ttf
+)
+;
+}
+span
+.
+spacer
+{
+/
+*
+to
+ensure
+the
+same
+vertical
+positioning
+of
+the
+text
+*
+/
+display
+:
+inline
+-
+block
+;
+height
+:
+3em
+;
+width
+:
+1em
+;
+vertical
+-
+align
+:
+baseline
 ;
 }
 <
@@ -144,7 +200,53 @@ body
 <
 p
 >
-DBC
+<
+span
+style
+=
+"
+font
+-
+family
+:
+MarkA
+"
+>
+A
+<
+/
+span
+>
+<
+span
+style
+=
+"
+font
+-
+family
+:
+Mark2B
+"
+>
+B
+<
+/
+span
+>
+C
+<
+span
+class
+=
+"
+spacer
+"
+>
+<
+/
+span
+>
 <
 /
 p
