--- a/layout/reftests/font-face/order-2.html
+++ b/layout/reftests/font-face/order-2.html
@@ -213,6 +213,44 @@ One
 "
 ;
 }
+span
+.
+spacer
+{
+/
+*
+to
+ensure
+the
+same
+vertical
+positioning
+of
+the
+text
+*
+/
+display
+:
+inline
+-
+block
+;
+height
+:
+3em
+;
+width
+:
+1em
+;
+vertical
+-
+align
+:
+baseline
+;
+}
 <
 /
 style
@@ -228,6 +266,18 @@ body
 p
 >
 ABC
+<
+span
+class
+=
+"
+spacer
+"
+>
+<
+/
+span
+>
 <
 /
 p
