--- a/layout/reftests/font-face/src-list-1-ref.html
+++ b/layout/reftests/font-face/src-list-1-ref.html
@@ -103,7 +103,7 @@ font
 family
 :
 "
-MarkA
+MarkD
 "
 ;
 src
@@ -115,7 +115,7 @@ url
 /
 fonts
 /
-markA
+markD
 .
 ttf
 )
@@ -128,7 +128,7 @@ font
 family
 :
 "
-MarkA
+MarkD
 "
 ;
 }
@@ -146,7 +146,7 @@ body
 <
 p
 >
-ABC
+DBC
 <
 /
 p
