--- a/layout/reftests/font-face/src-list-format-1.html
+++ b/layout/reftests/font-face/src-list-format-1.html
@@ -103,7 +103,7 @@ font
 family
 :
 "
-MarkD
+One
 "
 ;
 src
@@ -115,7 +115,24 @@ url
 /
 fonts
 /
-markD
+markA
+.
+ttf
+)
+format
+(
+"
+unknown
+"
+)
+url
+(
+.
+.
+/
+fonts
+/
+mark2A
 .
 ttf
 )
@@ -127,7 +144,9 @@ font
 -
 family
 :
-MarkD
+"
+One
+"
 ;
 }
 <
@@ -144,7 +163,7 @@ body
 <
 p
 >
-DBC
+ABC
 <
 /
 p
