--- a/layout/reftests/font-face/src-list-format-2.html
+++ b/layout/reftests/font-face/src-list-format-2.html
@@ -103,7 +103,7 @@ font
 family
 :
 "
-MarkA
+One
 "
 ;
 src
@@ -119,22 +119,12 @@ markA
 .
 ttf
 )
-;
-}
-font
--
-face
-{
-font
--
-family
-:
+format
+(
 "
-Mark2B
+unknown
 "
-;
-src
-:
+)
 url
 (
 .
@@ -142,10 +132,27 @@ url
 /
 fonts
 /
-mark2B
+mark2A
 .
 ttf
 )
+format
+(
+"
+truetype
+"
+)
+;
+}
+body
+{
+font
+-
+family
+:
+"
+One
+"
 ;
 }
 <
@@ -162,41 +169,7 @@ body
 <
 p
 >
-<
-span
-style
-=
-"
-font
--
-family
-:
-MarkA
-"
->
-A
-<
-/
-span
->
-<
-span
-style
-=
-"
-font
--
-family
-:
-Mark2B
-"
->
-B
-<
-/
-span
->
-C
+ABC
 <
 /
 p
