--- a/layout/reftests/font-face/src-list-format-3-ref.html
+++ b/layout/reftests/font-face/src-list-format-3-ref.html
@@ -103,7 +103,7 @@ font
 family
 :
 "
-One
+MarkD
 "
 ;
 src
@@ -115,40 +115,7 @@ url
 /
 fonts
 /
-markA
-.
-ttf
-)
-url
-(
-.
-.
-/
-fonts
-/
-mark2B
-.
-ttf
-)
-url
-(
-.
-.
-/
-fonts
-/
-mark2A
-.
-ttf
-)
-url
-(
-.
-.
-/
-fonts
-/
-markB
+markD
 .
 ttf
 )
@@ -160,9 +127,7 @@ font
 -
 family
 :
-"
-One
-"
+MarkD
 ;
 }
 <
@@ -179,7 +144,7 @@ body
 <
 p
 >
-ABC
+DBC
 <
 /
 p
