--- a/layout/reftests/font-face/src-list-format-3.html
+++ b/layout/reftests/font-face/src-list-format-3.html
@@ -103,7 +103,7 @@ font
 family
 :
 "
-MarkD
+One
 "
 ;
 src
@@ -115,9 +115,35 @@ url
 /
 fonts
 /
-markD
+markA
 .
 ttf
+)
+format
+(
+"
+unknown
+"
+"
+truetype
+"
+)
+url
+(
+.
+.
+/
+fonts
+/
+mark2A
+.
+ttf
+)
+format
+(
+"
+truetype
+"
 )
 ;
 }
@@ -127,7 +153,9 @@ font
 -
 family
 :
-MarkD
+"
+One
+"
 ;
 }
 <
@@ -144,7 +172,7 @@ body
 <
 p
 >
-DBC
+ABC
 <
 /
 p
