--- a/layout/reftests/font-face/src-list-format-2-ref.html
+++ b/layout/reftests/font-face/src-list-format-2-ref.html
@@ -103,7 +103,7 @@ font
 family
 :
 "
-MarkD
+Mark2D
 "
 ;
 src
@@ -115,7 +115,7 @@ url
 /
 fonts
 /
-markD
+mark2D
 .
 ttf
 )
@@ -127,7 +127,9 @@ font
 -
 family
 :
-MarkD
+"
+Mark2D
+"
 ;
 }
 <
