Better approach to some tests to avoid subpixel spacing differences.  (Bug 457821)
UltraBlame original commit: d6424955982fceffce773bd4115e389eb040bc31

--- a/layout/reftests/font-face/multiple-in-family-1-ref.html
+++ b/layout/reftests/font-face/multiple-in-family-1-ref.html
@@ -148,6 +148,33 @@ ttf
 )
 ;
 }
+font
+-
+face
+{
+font
+-
+family
+:
+"
+MarkD
+"
+;
+src
+:
+url
+(
+.
+.
+/
+fonts
+/
+markD
+.
+ttf
+)
+;
+}
 <
 /
 style
@@ -161,9 +188,23 @@ body
 >
 <
 p
+style
+=
+"
+font
+-
+family
+:
+MarkD
+"
+>
+DDC
+<
+/
+p
 >
 <
-span
+p
 style
 =
 "
@@ -177,10 +218,10 @@ MarkA
 A
 <
 /
-span
+p
 >
 <
-span
+p
 style
 =
 "
@@ -194,7 +235,19 @@ MarkB
 B
 <
 /
-span
+p
+>
+<
+p
+style
+=
+"
+font
+-
+family
+:
+MarkA
+"
 >
 C
 <
