--- a/layout/reftests/font-face/order-3-ref.html
+++ b/layout/reftests/font-face/order-3-ref.html
@@ -103,7 +103,7 @@ font
 family
 :
 "
-MarkA
+MarkXMark2Y
 "
 ;
 src
@@ -115,75 +115,21 @@ url
 /
 fonts
 /
-markA
+markXmark2Y
 .
 ttf
 )
 ;
 }
-font
--
-face
+body
 {
 font
 -
 family
 :
 "
-Mark2B
+MarkXMark2Y
 "
-;
-src
-:
-url
-(
-.
-.
-/
-fonts
-/
-mark2B
-.
-ttf
-)
-;
-}
-span
-.
-spacer
-{
-/
-*
-to
-ensure
-the
-same
-vertical
-positioning
-of
-the
-text
-*
-/
-display
-:
-inline
--
-block
-;
-height
-:
-3em
-;
-width
-:
-1em
-;
-vertical
--
-align
-:
-baseline
 ;
 }
 <
@@ -200,53 +146,7 @@ body
 <
 p
 >
-<
-span
-style
-=
-"
-font
--
-family
-:
-MarkA
-"
->
-A
-<
-/
-span
->
-<
-span
-style
-=
-"
-font
--
-family
-:
-Mark2B
-"
->
-B
-<
-/
-span
->
-C
-<
-span
-class
-=
-"
-spacer
-"
->
-<
-/
-span
->
+XYC
 <
 /
 p
