Bug 433055 - Text fields in bookmark properties should have the same height. r=dietrich, a=beltzner
UltraBlame original commit: 71a967ce2879c3a07a142b64b40604e2e1eee095

--- a/browser/themes/gnomestripe/browser/places/editBookmarkOverlay.css
+++ b/browser/themes/gnomestripe/browser/places/editBookmarkOverlay.css
@@ -766,6 +766,13 @@ css
 .
 *
 /
+-
+moz
+-
+appearance
+:
+textfield
+;
 /
 *
 Normal
@@ -780,13 +787,6 @@ none
 .
 *
 /
--
-moz
--
-appearance
-:
-textfield
-;
 cursor
 :
 text
@@ -844,6 +844,21 @@ colors
 ThreeDShadow
 ThreeDDarkShadow
 ;
+padding
+:
+2px
+2px
+3px
+;
+-
+moz
+-
+padding
+-
+start
+:
+4px
+;
 background
 -
 color
@@ -878,6 +893,13 @@ editable
 -
 box
 {
+-
+moz
+-
+appearance
+:
+none
+;
 /
 *
 Normal
@@ -894,33 +916,11 @@ textfield
 .
 *
 /
--
-moz
--
-appearance
-:
-none
-;
 padding
 :
-2px
-2px
-3px
-4px
+0
 ;
 }
-/
-*
-Hide
-the
-drop
-marker
-and
-the
-popup
-.
-*
-/
 #
 editBMPanel_namePicker
 [
