--- a/browser/themes/winstripe/browser/places/editBookmarkOverlay.css
+++ b/browser/themes/winstripe/browser/places/editBookmarkOverlay.css
@@ -704,6 +704,13 @@ css
 .
 *
 /
+-
+moz
+-
+appearance
+:
+textfield
+;
 /
 *
 Normal
@@ -713,18 +720,11 @@ set
 this
 to
 "
-none
+menulist
 "
 .
 *
 /
--
-moz
--
-appearance
-:
-textfield
-;
 cursor
 :
 text
@@ -782,6 +782,21 @@ colors
 ThreeDShadow
 ThreeDDarkShadow
 ;
+padding
+:
+2px
+2px
+3px
+;
+-
+moz
+-
+padding
+-
+start
+:
+4px
+;
 background
 -
 color
@@ -816,49 +831,11 @@ editable
 -
 box
 {
-/
-*
-Normal
-editable
-menulists
-set
-this
-to
-"
-menulist
--
-textfield
-"
-.
-*
-/
--
-moz
--
-appearance
-:
-none
-;
 padding
 :
-2px
-2px
-3px
-4px
+0
 ;
 }
-/
-*
-Hide
-the
-drop
-marker
-and
-the
-popup
-.
-*
-/
 #
 editBMPanel_namePicker
 [
