Bug 404229 - Make toolbarbuttons aware of toolbar mode. r=gavin a=beltzner
UltraBlame original commit: 2686d82a880c48c9d68843f62843404003509e2b

--- a/toolkit/themes/pinstripe/global/toolbarbutton.css
+++ b/toolkit/themes/pinstripe/global/toolbarbutton.css
@@ -1385,3 +1385,39 @@ normal
 important
 ;
 }
+toolbar
+[
+mode
+=
+"
+icons
+"
+]
+.
+toolbarbutton
+-
+text
+{
+display
+:
+none
+;
+}
+toolbar
+[
+mode
+=
+"
+text
+"
+]
+.
+toolbarbutton
+-
+icon
+{
+display
+:
+none
+;
+}
