--- a/toolkit/themes/winstripe/global/toolbarbutton.css
+++ b/toolkit/themes/winstripe/global/toolbarbutton.css
@@ -1503,3 +1503,66 @@ padding
 important
 ;
 }
+toolbar
+[
+mode
+=
+"
+icons
+"
+]
+.
+toolbarbutton
+-
+text
+{
+display
+:
+none
+;
+}
+toolbar
+[
+mode
+=
+"
+text
+"
+]
+.
+toolbarbutton
+-
+icon
+{
+display
+:
+none
+;
+}
+toolbar
+[
+mode
+=
+"
+text
+"
+]
+.
+toolbarbutton
+-
+text
+{
+padding
+:
+0
+!
+important
+;
+margin
+:
+3px
+5px
+!
+important
+;
+}
