--- a/toolkit/themes/pinstripe/global/toolbar.css
+++ b/toolkit/themes/pinstripe/global/toolbar.css
@@ -708,6 +708,42 @@ width
 1px
 ;
 }
+toolbar
+[
+mode
+=
+"
+icons
+"
+]
+.
+toolbarbutton
+-
+text
+{
+display
+:
+none
+;
+}
+toolbar
+[
+mode
+=
+"
+text
+"
+]
+.
+toolbarbutton
+-
+icon
+{
+display
+:
+none
+;
+}
 /
 *
 :
