--- a/toolkit/themes/winstripe/global/toolbar.css
+++ b/toolkit/themes/winstripe/global/toolbar.css
@@ -716,6 +716,69 @@ top
 important
 ;
 }
+toolbar
+[
+mode
+=
+"
+icons
+"
+]
+.
+toolbarbutton
+-
+text
+{
+display
+:
+none
+;
+}
+toolbar
+[
+mode
+=
+"
+text
+"
+]
+.
+toolbarbutton
+-
+icon
+{
+display
+:
+none
+;
+}
+toolbar
+[
+mode
+=
+"
+text
+"
+]
+.
+toolbarbutton
+-
+text
+{
+padding
+:
+0
+!
+important
+;
+margin
+:
+3px
+5px
+!
+important
+;
+}
 /
 *
 :
