Bug 465843.  Remove ctrl-tab preview switching and revert all tabs button to menu, for now.  r=dao, a=beltzner
UltraBlame original commit: 028bbc611036d02e71541c7bd967eb136c88bb4f

--- a/browser/themes/pinstripe/browser/browser.css
+++ b/browser/themes/pinstripe/browser/browser.css
@@ -14928,6 +14928,23 @@ Tabs
 Buttons
 *
 /
+%
+ifndef
+USE_TAB_PREVIEWS
+.
+tabs
+-
+alltabs
+-
+box
+{
+margin
+:
+0
+;
+}
+%
+endif
 .
 tabs
 -
@@ -15142,6 +15159,24 @@ button
 hover
 :
 active
+%
+ifndef
+USE_TAB_PREVIEWS
+.
+tabs
+-
+alltabs
+-
+button
+[
+open
+=
+"
+true
+"
+]
+%
+endif
 .
 tabs
 -
@@ -15179,6 +15214,24 @@ button
 toolbarbutton
 -
 text
+%
+ifndef
+USE_TAB_PREVIEWS
+.
+tabs
+-
+alltabs
+-
+button
+>
+.
+toolbarbutton
+-
+menu
+-
+dropmarker
+%
+endif
 .
 tabs
 -
@@ -15284,6 +15337,134 @@ opacity
 0
 ;
 }
+%
+ifndef
+USE_TAB_PREVIEWS
+/
+*
+*
+*
+All
+Tabs
+Menupopup
+*
+/
+.
+alltabs
+-
+item
+>
+.
+menu
+-
+iconic
+-
+left
+>
+.
+menu
+-
+iconic
+-
+icon
+{
+list
+-
+style
+-
+image
+:
+url
+(
+"
+chrome
+:
+/
+/
+global
+/
+skin
+/
+tree
+/
+item
+.
+png
+"
+)
+;
+}
+.
+alltabs
+-
+item
+[
+selected
+=
+"
+true
+"
+]
+{
+font
+-
+weight
+:
+bold
+;
+}
+.
+alltabs
+-
+item
+[
+busy
+]
+>
+.
+menu
+-
+iconic
+-
+left
+>
+.
+menu
+-
+iconic
+-
+icon
+{
+list
+-
+style
+-
+image
+:
+url
+(
+"
+chrome
+:
+/
+/
+global
+/
+skin
+/
+icons
+/
+loading_16
+.
+png
+"
+)
+!
+important
+;
+}
+%
+endif
 .
 tabs
 -
