--- a/browser/themes/winstripe/browser/browser.css
+++ b/browser/themes/winstripe/browser/browser.css
@@ -13939,6 +13939,22 @@ button
 toolbarbutton
 -
 text
+%
+ifndef
+USE_TAB_PREVIEWS
+.
+tabs
+-
+alltabs
+-
+button
+>
+.
+toolbarbutton
+-
+icon
+%
+endif
 .
 tabs
 -
@@ -13956,6 +13972,9 @@ display
 none
 ;
 }
+%
+ifdef
+USE_TAB_PREVIEWS
 .
 tabs
 -
@@ -14009,6 +14028,32 @@ region
 auto
 ;
 }
+%
+else
+.
+tabs
+-
+alltabs
+-
+button
+>
+.
+toolbarbutton
+-
+menu
+-
+dropmarker
+{
+margin
+:
+2px
+1px
+2px
+0px
+;
+}
+%
+endif
 .
 tabs
 -
@@ -14138,6 +14183,147 @@ png
 )
 ;
 }
+%
+ifndef
+USE_TAB_PREVIEWS
+/
+*
+All
+tabs
+menupopup
+*
+/
+.
+alltabs
+-
+item
+>
+.
+menu
+-
+iconic
+-
+left
+>
+.
+menu
+-
+iconic
+-
+icon
+{
+list
+-
+style
+-
+image
+:
+url
+(
+"
+chrome
+:
+/
+/
+global
+/
+skin
+/
+icons
+/
+folder
+-
+item
+.
+png
+"
+)
+;
+-
+moz
+-
+image
+-
+region
+:
+rect
+(
+0px
+16px
+16px
+0px
+)
+;
+}
+.
+alltabs
+-
+item
+[
+selected
+=
+"
+true
+"
+]
+{
+font
+-
+weight
+:
+bold
+;
+}
+.
+alltabs
+-
+item
+[
+busy
+]
+>
+.
+menu
+-
+iconic
+-
+left
+>
+.
+menu
+-
+iconic
+-
+icon
+{
+list
+-
+style
+-
+image
+:
+url
+(
+"
+chrome
+:
+/
+/
+global
+/
+skin
+/
+icons
+/
+loading_16
+.
+png
+"
+)
+;
+}
+%
+endif
 /
 *
 Tabstrip
