--- a/browser/base/content/tabbrowser.css
+++ b/browser/base/content/tabbrowser.css
@@ -99,6 +99,47 @@ arrowscrollbox
 }
 %
 endif
+%
+ifndef
+USE_TAB_PREVIEWS
+.
+tabs
+-
+alltabs
+-
+popup
+{
+-
+moz
+-
+binding
+:
+url
+(
+"
+chrome
+:
+/
+/
+browser
+/
+content
+/
+tabbrowser
+.
+xml
+#
+tabbrowser
+-
+alltabs
+-
+popup
+"
+)
+;
+}
+%
+endif
 .
 tab
 -
