--- a/layout/reftests/text/zwnj-02.xhtml
+++ b/layout/reftests/text/zwnj-02.xhtml
@@ -1,7 +1,165 @@
 <
+?
+xml
+version
+=
+"
+1
+.
+0
+"
+encoding
+=
+"
+UTF
+-
+8
+"
+?
+>
+<
+svg
+xmlns
+=
+"
+http
+:
+/
+/
+www
+.
+w3
+.
+org
+/
+2000
+/
+svg
+"
+xmlns
+:
+xlink
+=
+"
+http
+:
+/
+/
+www
+.
+w3
+.
+org
+/
+1999
+/
+xlink
+"
+version
+=
+"
+1
+.
+1
+"
+>
+<
 !
-DOCTYPE
+-
+-
+use
+an
+empty
+g
+to
+force
+filters
+.
+svg
+to
+load
+before
+onload
+-
+-
+>
+<
+use
+xlink
+:
+href
+=
+"
+.
+.
+/
+filters
+.
+svg
+#
+empty
+"
+/
+>
+<
+foreignObject
+filter
+=
+"
+url
+(
+.
+.
+/
+filters
+.
+svg
+#
+NonWhiteToBlack
+)
+"
+x
+=
+"
+0
+"
+y
+=
+"
+0
+"
+height
+=
+"
+100
+%
+"
+width
+=
+"
+100
+%
+"
+>
+<
 html
+xmlns
+=
+"
+http
+:
+/
+/
+www
+.
+w3
+.
+org
+/
+1999
+/
+xhtml
+"
 >
 <
 !
@@ -43,9 +201,6 @@ spans
 -
 >
 <
-html
->
-<
 head
 >
 <
@@ -58,31 +213,6 @@ test
 title
 >
 <
-meta
-http
--
-equiv
-=
-"
-content
--
-type
-"
-content
-=
-"
-text
-/
-html
-;
-charset
-=
-utf
--
-8
-"
->
-<
 style
 type
 =
@@ -92,6 +222,32 @@ text
 css
 "
 >
+html
+body
+{
+margin
+:
+0
+;
+background
+:
+white
+;
+color
+:
+black
+;
+height
+:
+100
+%
+;
+width
+:
+100
+%
+;
+}
 body
 {
 font
@@ -357,4 +513,12 @@ body
 <
 /
 html
+>
+<
+/
+foreignObject
+>
+<
+/
+svg
 >
