--- a/layout/reftests/text/444656.html
+++ b/layout/reftests/text/444656.html
@@ -50,17 +50,70 @@ title
 <
 style
 >
-p
+div
 {
 width
 :
-55ch
-;
-font
 -
-family
+moz
+-
+min
+-
+content
+;
+position
 :
-monospace
+relative
+;
+}
+/
+*
+prevent
+the
+soft
+hyphens
+from
+contributing
+to
+the
+minimum
+content
+width
+*
+/
+div
+>
+p
+:
+nth
+-
+child
+(
+2
+)
+{
+position
+:
+absolute
+;
+top
+:
+auto
+;
+right
+:
+0
+;
+margin
+-
+top
+:
+0
+;
+width
+:
+100
+%
 ;
 }
 <
@@ -80,6 +133,36 @@ rtl
 "
 >
 <
+div
+>
+<
+!
+-
+-
+add
+a
+first
+paragraph
+with
+no
+soft
+hyphens
+to
+set
+minimum
+content
+width
+-
+-
+>
+<
+p
+>
+<
+/
+p
+>
+<
 p
 >
 &
@@ -125,6 +208,10 @@ p
 <
 /
 p
+>
+<
+/
+div
 >
 <
 /
