I meant to use Mark2A rather than MarkB in prop-order-over-rule-order* tests (thanks to karlt for pointing out the problem).  And, while I'm here, make a second multiple-in-family test variant so we don't lose any test coverage from the correction.  a=tests
UltraBlame original commit: 48da1d4688225df4aaeb0c56744b7f150d65f5df

--- a/layout/reftests/font-face/multiple-in-family-1b.html
+++ b/layout/reftests/font-face/multiple-in-family-1b.html
@@ -94,6 +94,52 @@ text
 css
 "
 >
+/
+*
+This
+has
+the
+font
+-
+face
+rules
+in
+the
+other
+order
+in
+case
+that
+matters
+*
+/
+font
+-
+face
+{
+font
+-
+family
+:
+"
+MarkB
+"
+;
+src
+:
+url
+(
+.
+.
+/
+fonts
+/
+markB
+.
+ttf
+)
+;
+}
 font
 -
 face
@@ -121,33 +167,6 @@ ttf
 )
 ;
 }
-font
--
-face
-{
-font
--
-family
-:
-"
-Mark2A
-"
-;
-src
-:
-url
-(
-.
-.
-/
-fonts
-/
-mark2A
-.
-ttf
-)
-;
-}
 body
 {
 font
@@ -155,10 +174,10 @@ font
 family
 :
 "
-Mark2A
-"
-"
 MarkA
+"
+"
+MarkB
 "
 ;
 }
@@ -177,6 +196,30 @@ body
 p
 >
 ABC
+<
+/
+p
+>
+<
+p
+>
+A
+<
+/
+p
+>
+<
+p
+>
+B
+<
+/
+p
+>
+<
+p
+>
+C
 <
 /
 p
