--- a/layout/reftests/font-face/prop-order-over-rule-order-2a.html
+++ b/layout/reftests/font-face/prop-order-over-rule-order-2a.html
@@ -103,7 +103,7 @@ font
 family
 :
 "
-MarkB
+Mark2A
 "
 ;
 src
@@ -115,7 +115,7 @@ url
 /
 fonts
 /
-markB
+mark2A
 .
 ttf
 )
@@ -158,7 +158,7 @@ family
 MarkA
 "
 "
-MarkB
+Mark2A
 "
 ;
 }
