Back out 48da1d4688225df4aaeb0c56744b7f150d65f5df due to mac startup failures.
UltraBlame original commit: 0158a0c9ba21ecb0f07d6a2cea4517bcf652bf10

--- a/layout/reftests/font-face/prop-order-over-rule-order-1b.html
+++ b/layout/reftests/font-face/prop-order-over-rule-order-1b.html
@@ -130,7 +130,7 @@ font
 family
 :
 "
-Mark2A
+MarkB
 "
 ;
 src
@@ -142,7 +142,7 @@ url
 /
 fonts
 /
-mark2A
+markB
 .
 ttf
 )
@@ -155,7 +155,7 @@ font
 family
 :
 "
-Mark2A
+MarkB
 "
 "
 MarkA
