--- a/layout/reftests/font-face/prop-order-over-rule-order-2b.html
+++ b/layout/reftests/font-face/prop-order-over-rule-order-2b.html
@@ -103,7 +103,7 @@ font
 family
 :
 "
-Mark2A
+MarkB
 "
 ;
 src
@@ -115,7 +115,7 @@ url
 /
 fonts
 /
-mark2A
+markB
 .
 ttf
 )
@@ -155,7 +155,7 @@ font
 family
 :
 "
-Mark2A
+MarkB
 "
 "
 MarkA
