--- a/layout/reftests/font-face/prop-order-over-rule-order-1a.html
+++ b/layout/reftests/font-face/prop-order-over-rule-order-1a.html
@@ -130,7 +130,7 @@ font
 family
 :
 "
-Mark2A
+MarkB
 "
 ;
 src
@@ -142,7 +142,7 @@ url
 /
 fonts
 /
-mark2A
+markB
 .
 ttf
 )
@@ -158,7 +158,7 @@ family
 MarkA
 "
 "
-Mark2A
+MarkB
 "
 ;
 }
