Bug 430449 - Notification bar alignment fixes. Also fixes bug 462606. ui-r=faaborg, r=dao, a191=beltzner
UltraBlame original commit: 4ff260cb5feab1570f85f8bed834d9a9931d466d

--- a/toolkit/themes/pinstripe/global/notification.css
+++ b/toolkit/themes/pinstripe/global/notification.css
@@ -28,11 +28,11 @@ xul
 ;
 notification
 {
-min
--
-height
+padding
 :
-24px
+4px
+3px
+5px
 ;
 }
 notification
@@ -264,10 +264,8 @@ height
 ;
 margin
 :
-0px
-1px
-0px
-6px
+0
+4px
 ;
 }
 /
@@ -396,241 +394,6 @@ png
 ;
 }
 .
-messageText
-{
-margin
--
-top
-:
-2px
-;
-font
--
-weight
-:
-bold
-;
--
-moz
--
-margin
--
-start
-:
-5px
-;
-}
-button
-{
--
-moz
--
-appearance
-:
-none
-;
-background
-:
-url
-(
-"
-chrome
-:
-/
-/
-global
-/
-skin
-/
-icons
-/
-white
--
-gray
--
-gradient
-.
-gif
-"
-)
-transparent
-repeat
--
-x
-center
-center
-;
--
-moz
--
-background
--
-clip
-:
-padding
-;
-border
-:
-1px
-solid
-;
-border
--
-bottom
--
-width
-:
-2px
-;
--
-moz
--
-border
--
-radius
-:
-10px
-;
--
-moz
--
-border
--
-top
--
-colors
-:
-rgba
-(
-0
-0
-0
-0
-.
-5
-)
-;
--
-moz
--
-border
--
-right
--
-colors
-:
-rgba
-(
-0
-0
-0
-0
-.
-5
-)
-;
--
-moz
--
-border
--
-bottom
--
-colors
-:
-rgba
-(
-255
-255
-255
-0
-.
-35
-)
-rgba
-(
-0
-0
-0
-0
-.
-5
-)
-;
--
-moz
--
-border
--
-left
--
-colors
-:
-rgba
-(
-0
-0
-0
-0
-.
-5
-)
-;
-padding
-:
-0
-5px
-;
-min
--
-width
-:
-79px
-;
-min
--
-height
-:
-17px
-;
-}
-button
-:
-hover
-:
-active
-{
-background
--
-image
-:
-url
-(
-"
-chrome
-:
-/
-/
-global
-/
-skin
-/
-icons
-/
-white
--
-gray
--
-gradient
--
-active
-.
-gif
-"
-)
-;
-}
-.
 notification
 -
 inner
@@ -643,6 +406,27 @@ important
 ;
 }
 .
+messageText
+{
+margin
+:
+0
+3px
+!
+important
+;
+padding
+:
+0
+;
+font
+-
+weight
+:
+bold
+;
+}
+.
 messageCloseButton
 {
 -
@@ -652,14 +436,14 @@ appearance
 :
 none
 ;
--
-moz
--
 padding
--
-end
 :
-4px
+0
+;
+margin
+:
+0
+2px
 ;
 list
 -
@@ -704,6 +488,19 @@ text
 display
 :
 none
+;
+}
+.
+messageCloseButton
+>
+.
+toolbarbutton
+-
+icon
+{
+padding
+:
+0
 ;
 }
 .
