Bug 231313 - CSS changes for new-style tabs. r=dao, a191=beltzner
UltraBlame original commit: 7463787cec7697cb56f0e1e8bf23792eccd614f6

--- a/toolkit/themes/pinstripe/global/tabbox.css
+++ b/toolkit/themes/pinstripe/global/tabbox.css
@@ -1,135 +1,218 @@
 /
 *
-*
-*
-*
-*
-*
-*
-*
-*
-*
-Tab
-widget
-*
-*
-*
-*
-*
-*
-*
-*
-*
-/
-/
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-/
-/
-*
-This
-Mac
--
-specific
-CSS
-styles
-tabs
-that
-are
-located
-on
-the
-top
-of
-their
-content
-*
-as
-Macintosh
-tabs
-generally
-are
-.
-An
-example
-of
-using
-bottom
-tab
-images
-can
-be
-*
-found
-in
-EditorToolbar
+=
+=
+=
+=
+=
+tabbox
 .
 css
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+Styles
+used
+by
+the
+XUL
+tabbox
+element
+The
+default
+style
+of
+these
+tabs
+is
+that
+of
+an
+NSTabView
+with
+tabs
+at
+the
+top
 in
-classic
-/
-editor
-/
+the
+"
+regular
+"
+size
 .
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
+These
+tabs
+can
+be
+used
+with
+or
+without
+a
+tabbox
+element
+.
+For
+bottom
+tabs
+you
+should
+use
+the
+"
+tabs
+-
+bottom
+"
+class
+on
+the
+tabbox
+or
+the
+tabs
+element
+.
+Bottom
+tabs
+use
+a
+style
+that
+'
+s
+similar
+to
+the
+one
+used
+in
+Adium
+.
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
 *
 /
 namespace
@@ -160,20 +243,67 @@ xul
 "
 )
 ;
-/
-*
-*
-*
-TAB
+tabbox
+{
+margin
 :
-TOP
-<
-tab
+0
+5px
+;
+}
+tabpanels
+{
+-
+moz
+-
+appearance
+:
+tabpanels
+;
+padding
+:
+33px
+15px
+15px
+;
+}
+tabs
+{
+-
+moz
+-
+box
+-
+align
+:
+center
+;
+font
+:
+menu
+;
+}
+tabbox
 >
-*
-*
-*
-/
+tabs
+{
+padding
+:
+0
+10px
+;
+margin
+-
+bottom
+:
+-
+12px
+;
+position
+:
+relative
+;
+}
 tab
 {
 -
@@ -192,57 +322,56 @@ align
 :
 stretch
 ;
-color
-:
-#
-000000
-;
-padding
-:
-3px
-;
 }
+tab
+>
 .
 tab
 -
-text
-{
-font
-:
-menu
-;
-}
-tabs
+middle
 {
 padding
 :
-0px
+2px
+6px
 ;
-margin
+}
+tab
+[
+first
 -
-bottom
+tab
+=
+true
+]
+{
+-
+moz
+-
+padding
+-
+start
 :
--
 2px
 ;
 }
-tabs
-.
-tabs
+tab
+[
+last
 -
-bottom
+tab
+=
+true
+]
 {
+-
+moz
+-
 padding
 -
-left
+end
 :
-6px
-;
-padding
--
-right
-:
-6px
+2px
 ;
 }
 .
@@ -262,65 +391,107 @@ box
 flex
 :
 1
-!
-important
 ;
 }
 /
 *
+Tabs
+at
+the
+bottom
 *
+These
+tabs
+are
+smaller
+left
+aligned
+and
+don
+'
+t
+extend
+into
+the
+tabpanel
+.
 *
-TAB
-:
-BOTTOM
-<
-tab
-class
-=
-"
-tab
+/
+tabbox
+.
+tabs
 -
 bottom
-"
 >
-*
-*
-*
-/
-/
-*
-Found
-in
-editor
+tabpanels
+{
+padding
+:
+10px
+;
+}
+tabbox
 .
-xul
-&
-editorOverlay
+tabs
+-
+bottom
+>
+tabs
+tabs
 .
-xul
-*
-SMALL
-TABS
-FOR
-NOW
-*
-/
-.
-tab
+tabs
 -
 bottom
 {
-margin
+background
 -
-bottom
+color
 :
-2px
+rgba
+(
+0
+0
+0
+0
+.
+1
+)
+;
+padding
+:
+0
 ;
 margin
+:
+0
+;
+border
 -
 top
 :
 2px
+solid
+;
+-
+moz
+-
+border
+-
+top
+-
+colors
+:
+#
+888
+rgba
+(
+0
+0
+0
+0
+.
+08
+)
 ;
 -
 moz
@@ -329,405 +500,583 @@ box
 -
 align
 :
-center
+start
 ;
-}
-.
-tab
--
-bottom
->
-.
-tab
--
-middle
-{
-padding
-:
-0
-6px
-0
-6px
-;
-margin
--
-bottom
-:
-2px
-;
-}
-.
-tab
--
-bottom
->
-.
-tab
--
-middle
->
-.
-tab
--
-text
-{
 font
 :
 message
 -
 box
 ;
-font
--
-weight
-:
-bold
-!
-important
-;
-margin
-:
-0
-0
--
-1px
-0
-!
-important
-;
-padding
-:
-0
-!
-important
-;
 }
-/
-*
-top
-tabs
-*
-/
 tabbox
-[
-orient
-=
-"
-vertical
-"
-]
+.
 tabs
-[
-orient
-=
-"
-horizontal
-"
-]
-tab
-{
-padding
-:
-0px
-;
-margin
-:
-0px
-;
-}
-/
-*
-bottom
-tabs
-*
-/
-tabbox
-[
-orient
-=
-"
-vertical
-"
-]
-tabpanels
-+
-tabs
-[
-orient
-=
-"
-horizontal
-"
-]
-tab
-{
-border
--
-top
-:
-none
-;
-border
 -
 bottom
-:
-1px
-solid
-#
-666666
-;
-border
+>
+tabs
+>
+.
+tabs
 -
 left
-:
-1px
-solid
-white
-;
-border
+tabs
+.
+tabs
 -
-right
-:
-1px
-solid
-#
-666666
-;
+bottom
+>
+.
+tabs
+-
+left
+{
 -
 moz
 -
-border
+box
 -
-radius
+flex
 :
-0px
-0px
-8px
-8px
-;
-padding
-:
-1px
-5px
-3px
-5px
-;
-margin
-:
-1px
-2px
-1px
-2px
+0
 ;
 }
-/
-*
-left
-tabs
-*
-/
 tabbox
-[
-orient
-=
-"
-horizontal
-"
-]
+.
 tabs
-[
-orient
-=
-"
-vertical
-"
-]
-tab
-{
-border
--
-right
-:
-none
-;
--
-moz
--
-border
--
-radius
-:
-8px
-0px
-0px
-8px
-;
-padding
--
-right
-:
-1px
-;
-margin
-:
-2px
-1px
-2px
-1px
-;
-}
-/
-*
-right
-tabs
-*
-/
-tabbox
-[
-orient
-=
-"
-horizontal
-"
-]
-tabpanels
-+
-tabs
-[
-orient
-=
-"
-vertical
-"
-]
-tab
-{
-border
--
-top
-:
-1px
-solid
-white
-;
-border
 -
 bottom
-:
-1px
-solid
-#
-666666
-;
-border
+>
+tabs
+>
+tab
+tabs
+.
+tabs
 -
-left
-:
-none
-;
-border
--
-right
-:
-1px
-solid
-#
-666666
-;
--
-moz
--
-border
--
-radius
-:
-0px
-8px
-8px
-0px
-;
-padding
-:
-3px
-5px
-1px
-5px
-;
-margin
-:
-2px
-1px
-2px
-1px
-;
-}
-tabbox
-{
-border
-:
-none
-;
-}
-tabpanels
+bottom
+>
+tab
 {
 -
 moz
 -
 appearance
 :
-tabpanels
+none
 ;
-border
--
-top
+margin
 :
-0px
-;
-border
 -
-bottom
-:
-2px
-ridge
-#
-000000
-;
-border
--
-left
-:
-2px
-groove
-#
-000000
-;
-border
--
-right
-:
-2px
-ridge
-#
-000000
+1px
+0
+0
 ;
 padding
 :
-15px
-5px
-5px
-5px
+0
+0
+2px
+0
 ;
+position
+:
+relative
+;
+-
+moz
+-
+border
+-
+end
+:
+1px
+solid
+rgba
+(
+0
+0
+0
+0
+.
+19
+)
+;
+}
+tabbox
+.
+tabs
+-
+bottom
+>
+tabs
+>
+tab
+>
+.
+tab
+-
+middle
+tabs
+.
+tabs
+-
+bottom
+>
+tab
+>
+.
+tab
+-
+middle
+{
+-
+moz
+-
+box
+-
+align
+:
+stretch
+;
+padding
+:
+1px
+2px
+0
+2px
+;
+}
+tabbox
+.
+tabs
+-
+bottom
+>
+tabs
+>
+tab
+:
+not
+(
+[
+selected
+=
+true
+]
+)
+:
+hover
+tabs
+.
+tabs
+-
+bottom
+>
+tab
+:
+not
+(
+[
+selected
+=
+true
+]
+)
+:
+hover
+{
 background
 -
 color
 :
+rgba
+(
+0
+0
+0
+0
+.
+1
+)
+;
+-
+moz
+-
+border
+-
+end
+-
+color
+:
+rgba
+(
+0
+0
+0
+0
+.
+1
+)
+;
+}
+tabbox
+.
+tabs
+-
+bottom
+>
+tabs
+>
+tab
+[
+selected
+=
+true
+]
+tabs
+.
+tabs
+-
+bottom
+>
+tab
+[
+selected
+=
+true
+]
+{
+border
+:
+solid
 #
-EEEEEE
+888
+;
+border
+-
+width
+:
+0
+2px
+2px
+;
+-
+moz
+-
+border
+-
+radius
+:
+2px
+;
+-
+moz
+-
+border
+-
+left
+-
+colors
+:
+rgba
+(
+0
+0
+0
+0
+.
+08
+)
+#
+888
+;
+-
+moz
+-
+border
+-
+right
+-
+colors
+:
+rgba
+(
+0
+0
+0
+0
+.
+08
+)
+#
+888
+;
+-
+moz
+-
+border
+-
+bottom
+-
+colors
+:
+rgba
+(
+0
+0
+0
+0
+.
+08
+)
+#
+888
+;
+-
+moz
+-
+margin
+-
+end
+:
+-
+1px
+;
+margin
+-
+top
+:
+-
+2px
 ;
 margin
 -
 bottom
 :
-10px
+1px
+;
+padding
+:
+0
+;
+}
+tabbox
+.
+tabs
+-
+bottom
+>
+tabs
+>
+tab
+[
+beforeselected
+=
+true
+]
+tabs
+.
+tabs
+-
+bottom
+>
+tab
+[
+beforeselected
+=
+true
+]
+{
+-
+moz
+-
+border
+-
+end
+-
+color
+:
+transparent
+;
+-
+moz
+-
+margin
+-
+end
+:
+-
+2px
+;
+}
+tabbox
+.
+tabs
+-
+bottom
+>
+tabs
+>
+tab
+:
+not
+(
+[
+selected
+=
+true
+]
+)
+[
+first
+-
+tab
+=
+true
+]
+tabs
+.
+tabs
+-
+bottom
+>
+tab
+:
+not
+(
+[
+selected
+=
+true
+]
+)
+[
+first
+-
+tab
+=
+true
+]
+{
+-
+moz
+-
+border
+-
+start
+:
+4px
+solid
+transparent
+;
+}
+tabbox
+.
+tabs
+-
+bottom
+>
+tabs
+>
+tab
+[
+selected
+=
+true
+]
+[
+first
+-
+tab
+=
+true
+]
+tabs
+.
+tabs
+-
+bottom
+>
+tab
+[
+selected
+=
+true
+]
+[
+first
+-
+tab
+=
+true
+]
+{
+-
+moz
+-
+margin
+-
+start
+:
+2px
+;
+}
+tabbox
+.
+tabs
+-
+bottom
+tabbox
+.
+tabs
+-
+bottom
+>
+tabpanels
+tabbox
+.
+tabs
+-
+bottom
+>
+tabs
+>
+tab
+[
+selected
+=
+true
+]
+>
+.
+tab
+-
+middle
+tabs
+.
+tabs
+-
+bottom
+>
+tab
+[
+selected
+=
+true
+]
+>
+.
+tab
+-
+middle
+{
+-
+moz
+-
+appearance
+:
+dialog
 ;
 }
