Bug 462650 - HUD panels: add half diamond arrow on the top of the panel. ui-r=faaborg, r+a191=beltzner
UltraBlame original commit: 960b97b64485e319ce7557fd53486f39166c7346

--- a/browser/themes/pinstripe/browser/browser.css
+++ b/browser/themes/pinstripe/browser/browser.css
@@ -9076,66 +9076,66 @@ appearance
 :
 none
 ;
-background
 -
-color
+moz
+-
+window
+-
+shadow
 :
-rgba
-(
-68
-68
-68
-0
-.
-9
-)
-;
-border
-:
-1px
-solid
-rgba
-(
-255
-255
-255
-0
-.
-15
-)
+none
 ;
 -
 moz
 -
 border
 -
-radius
+image
 :
-8px
+url
+(
+chrome
+:
+/
+/
+browser
+/
+skin
+/
+hud
+-
+panel
+.
+png
+)
+26
+50
+22
+18
+/
+26px
+50px
+22px
+18px
+repeat
 ;
+margin
 -
-moz
--
-border
--
-radius
--
-topright
+right
 :
-0px
-;
-padding
-:
-10px
-8px
-6px
-8px
+27px
 ;
 margin
 -
 top
 :
-4px
+1px
+;
+padding
+-
+top
+:
+8px
 ;
 color
 :
@@ -9161,7 +9161,7 @@ bold
 ;
 margin
 :
-8px
+2px
 12px
 0px
 9px
@@ -9171,15 +9171,17 @@ margin
 editBookmarkPanel
 >
 hbox
+#
+editBookmarkPanel
+>
+vbox
 {
+margin
 -
-moz
--
-padding
--
-end
+right
 :
-1px
+-
+30px
 ;
 }
 /
@@ -17700,87 +17702,74 @@ appearance
 :
 none
 ;
+-
+moz
+-
+window
+-
+shadow
+:
+none
+;
 background
 -
 color
 :
-rgba
-(
-68
-68
-68
-0
-.
-9
-)
-;
-border
-:
-1px
-solid
-rgba
-(
-255
-255
-255
-0
-.
-15
-)
-;
--
-moz
--
-border
--
-radius
-:
-8px
-;
--
-moz
--
-border
--
-radius
--
-topleft
-:
-0px
-;
-padding
-:
-10px
-8px
-6px
-8px
+transparent
 ;
 margin
 -
 top
 :
 -
-3px
+4px
 ;
--
-moz
--
 margin
 -
-start
+left
 :
-11px
-;
-color
-:
-#
-ffffff
+-
+13px
 ;
 min
 -
 width
 :
 280px
+;
+-
+moz
+-
+border
+-
+image
+:
+url
+(
+chrome
+:
+/
+/
+browser
+/
+skin
+/
+hud
+-
+panel
+.
+png
+)
+26
+18
+22
+50
+/
+26px
+18px
+22px
+50px
+repeat
 ;
 }
 #
@@ -17797,10 +17786,34 @@ appearance
 :
 none
 ;
+margin
+:
+4px
+3px
+2px
+-
+30px
+;
 color
 :
 #
 ffffff
+;
+}
+#
+identity
+-
+popup
+-
+content
+-
+box
+{
+margin
+-
+top
+:
+4px
 ;
 }
 /
@@ -18024,7 +18037,9 @@ padding
 ;
 margin
 :
-6px
+10px
+0
+0
 ;
 min
 -
