Bug 463810 - Add ellipsis to "Clear Recent History" button in about:privatebrowsing; r,a191=beltzner
UltraBlame original commit: 9bf88e2ecc45293646f6f3972e770193c1e2165b

--- a/browser/components/privatebrowsing/content/aboutPrivateBrowsing.xhtml
+++ b/browser/components/privatebrowsing/content/aboutPrivateBrowsing.xhtml
@@ -1044,7 +1044,7 @@ label
 &
 privatebrowsingpage
 .
-recentHistory
+clearRecentHistory
 .
 label
 ;
@@ -1055,7 +1055,7 @@ accesskey
 &
 privatebrowsingpage
 .
-recentHistory
+clearRecentHistory
 .
 accesskey
 ;
