Re-enable ctrl-tab previews on trunk in preparation for bug 465076. (Backed out changeset 028bbc611036)
UltraBlame original commit: c8f2a2be4d614c5d65a7cfa6625f9f385b5dfdea

--- a/browser/themes/pinstripe/browser/browser.css
+++ b/browser/themes/pinstripe/browser/browser.css
@@ -1082,6 +1082,9 @@ margin
 padding
 :
 0
+0
+1px
+0
 ;
 -
 moz
@@ -1531,7 +1534,7 @@ no
 -
 repeat
 right
-top
+center
 ;
 }
 toolbarbutton
@@ -1717,7 +1720,7 @@ no
 -
 repeat
 right
-top
+center
 ;
 }
 toolbarbutton
@@ -1802,7 +1805,7 @@ no
 -
 repeat
 right
-top
+center
 ;
 }
 toolbarbutton
@@ -2066,7 +2069,7 @@ no
 -
 repeat
 right
-top
+center
 !
 important
 ;
@@ -2103,6 +2106,32 @@ margin
 display
 :
 none
+!
+important
+;
+}
+toolbarbutton
+.
+bookmark
+-
+item
+.
+toolbarbutton
+-
+text
+{
+font
+-
+size
+:
+100
+%
+!
+important
+;
+margin
+:
+0px
 !
 important
 ;
@@ -9076,66 +9105,66 @@ appearance
 :
 none
 ;
+background
 -
-moz
--
-window
--
-shadow
+color
 :
-none
+rgba
+(
+68
+68
+68
+0
+.
+9
+)
+;
+border
+:
+1px
+solid
+rgba
+(
+255
+255
+255
+0
+.
+15
+)
 ;
 -
 moz
 -
 border
 -
-image
-:
-url
-(
-chrome
-:
-/
-/
-browser
-/
-skin
-/
-hud
--
-panel
-.
-png
-)
-26
-50
-22
-18
-/
-26px
-50px
-22px
-18px
-repeat
-;
-margin
--
-right
-:
-27px
-;
-margin
--
-top
-:
-1px
-;
-padding
--
-top
+radius
 :
 8px
+;
+-
+moz
+-
+border
+-
+radius
+-
+topright
+:
+0px
+;
+padding
+:
+10px
+8px
+6px
+8px
+;
+margin
+-
+top
+:
+4px
 ;
 color
 :
@@ -9161,7 +9190,7 @@ bold
 ;
 margin
 :
-2px
+8px
 12px
 0px
 9px
@@ -9171,17 +9200,15 @@ margin
 editBookmarkPanel
 >
 hbox
-#
-editBookmarkPanel
->
-vbox
 {
-margin
 -
-right
+moz
+-
+padding
+-
+end
 :
--
-30px
+1px
 ;
 }
 /
@@ -13099,15 +13126,6 @@ tabbrowser
 :
 *
 /
-tabbrowser
->
-tabbox
-{
-margin
-:
-0
-;
-}
 .
 tab
 -
@@ -14910,23 +14928,6 @@ Tabs
 Buttons
 *
 /
-%
-ifndef
-USE_TAB_PREVIEWS
-.
-tabs
--
-alltabs
--
-box
-{
-margin
-:
-0
-;
-}
-%
-endif
 .
 tabs
 -
@@ -15141,24 +15142,6 @@ button
 hover
 :
 active
-%
-ifndef
-USE_TAB_PREVIEWS
-.
-tabs
--
-alltabs
--
-button
-[
-open
-=
-"
-true
-"
-]
-%
-endif
 .
 tabs
 -
@@ -15196,24 +15179,6 @@ button
 toolbarbutton
 -
 text
-%
-ifndef
-USE_TAB_PREVIEWS
-.
-tabs
--
-alltabs
--
-button
->
-.
-toolbarbutton
--
-menu
--
-dropmarker
-%
-endif
 .
 tabs
 -
@@ -15319,134 +15284,6 @@ opacity
 0
 ;
 }
-%
-ifndef
-USE_TAB_PREVIEWS
-/
-*
-*
-*
-All
-Tabs
-Menupopup
-*
-/
-.
-alltabs
--
-item
->
-.
-menu
--
-iconic
--
-left
->
-.
-menu
--
-iconic
--
-icon
-{
-list
--
-style
--
-image
-:
-url
-(
-"
-chrome
-:
-/
-/
-global
-/
-skin
-/
-tree
-/
-item
-.
-png
-"
-)
-;
-}
-.
-alltabs
--
-item
-[
-selected
-=
-"
-true
-"
-]
-{
-font
--
-weight
-:
-bold
-;
-}
-.
-alltabs
--
-item
-[
-busy
-]
->
-.
-menu
--
-iconic
--
-left
->
-.
-menu
--
-iconic
--
-icon
-{
-list
--
-style
--
-image
-:
-url
-(
-"
-chrome
-:
-/
-/
-global
-/
-skin
-/
-icons
-/
-loading_16
-.
-png
-"
-)
-!
-important
-;
-}
-%
-endif
 .
 tabs
 -
@@ -17702,74 +17539,87 @@ appearance
 :
 none
 ;
--
-moz
--
-window
--
-shadow
-:
-none
-;
 background
 -
 color
 :
-transparent
+rgba
+(
+68
+68
+68
+0
+.
+9
+)
 ;
-margin
--
-top
+border
 :
--
-4px
-;
-margin
--
-left
-:
--
-13px
-;
-min
--
-width
-:
-280px
+1px
+solid
+rgba
+(
+255
+255
+255
+0
+.
+15
+)
 ;
 -
 moz
 -
 border
 -
-image
+radius
 :
-url
-(
-chrome
-:
-/
-/
-browser
-/
-skin
-/
-hud
+8px
+;
 -
-panel
-.
-png
-)
-26
-18
-22
-50
-/
-26px
-18px
-22px
-50px
-repeat
+moz
+-
+border
+-
+radius
+-
+topleft
+:
+0px
+;
+padding
+:
+10px
+8px
+6px
+8px
+;
+margin
+-
+top
+:
+-
+3px
+;
+-
+moz
+-
+margin
+-
+start
+:
+11px
+;
+color
+:
+#
+ffffff
+;
+min
+-
+width
+:
+280px
 ;
 }
 #
@@ -17786,34 +17636,10 @@ appearance
 :
 none
 ;
-margin
-:
-4px
-3px
-2px
--
-30px
-;
 color
 :
 #
 ffffff
-;
-}
-#
-identity
--
-popup
--
-content
--
-box
-{
-margin
--
-top
-:
-4px
 ;
 }
 /
@@ -18037,9 +17863,7 @@ padding
 ;
 margin
 :
-10px
-0
-0
+6px
 ;
 min
 -
