--- a/browser/themes/pinstripe/browser/browser.css
+++ b/browser/themes/pinstripe/browser/browser.css
@@ -1082,9 +1082,6 @@ margin
 padding
 :
 0
-0
-1px
-0
 ;
 -
 moz
@@ -1534,7 +1531,7 @@ no
 -
 repeat
 right
-center
+top
 ;
 }
 toolbarbutton
@@ -1720,7 +1717,7 @@ no
 -
 repeat
 right
-center
+top
 ;
 }
 toolbarbutton
@@ -1805,7 +1802,7 @@ no
 -
 repeat
 right
-center
+top
 ;
 }
 toolbarbutton
@@ -2069,7 +2066,7 @@ no
 -
 repeat
 right
-center
+top
 !
 important
 ;
@@ -2106,32 +2103,6 @@ margin
 display
 :
 none
-!
-important
-;
-}
-toolbarbutton
-.
-bookmark
--
-item
-.
-toolbarbutton
--
-text
-{
-font
--
-size
-:
-100
-%
-!
-important
-;
-margin
-:
-0px
 !
 important
 ;
@@ -9105,66 +9076,66 @@ appearance
 :
 none
 ;
-background
 -
-color
+moz
+-
+window
+-
+shadow
 :
-rgba
-(
-68
-68
-68
-0
-.
-9
-)
-;
-border
-:
-1px
-solid
-rgba
-(
-255
-255
-255
-0
-.
-15
-)
+none
 ;
 -
 moz
 -
 border
 -
-radius
+image
 :
-8px
+url
+(
+chrome
+:
+/
+/
+browser
+/
+skin
+/
+hud
+-
+panel
+.
+png
+)
+26
+50
+22
+18
+/
+26px
+50px
+22px
+18px
+repeat
 ;
+margin
 -
-moz
--
-border
--
-radius
--
-topright
+right
 :
-0px
-;
-padding
-:
-10px
-8px
-6px
-8px
+27px
 ;
 margin
 -
 top
 :
-4px
+1px
+;
+padding
+-
+top
+:
+8px
 ;
 color
 :
@@ -9190,7 +9161,7 @@ bold
 ;
 margin
 :
-8px
+2px
 12px
 0px
 9px
@@ -9200,15 +9171,17 @@ margin
 editBookmarkPanel
 >
 hbox
+#
+editBookmarkPanel
+>
+vbox
 {
+margin
 -
-moz
--
-padding
--
-end
+right
 :
-1px
+-
+30px
 ;
 }
 /
@@ -13126,6 +13099,15 @@ tabbrowser
 :
 *
 /
+tabbrowser
+>
+tabbox
+{
+margin
+:
+0
+;
+}
 .
 tab
 -
@@ -17539,87 +17521,74 @@ appearance
 :
 none
 ;
+-
+moz
+-
+window
+-
+shadow
+:
+none
+;
 background
 -
 color
 :
-rgba
-(
-68
-68
-68
-0
-.
-9
-)
-;
-border
-:
-1px
-solid
-rgba
-(
-255
-255
-255
-0
-.
-15
-)
-;
--
-moz
--
-border
--
-radius
-:
-8px
-;
--
-moz
--
-border
--
-radius
--
-topleft
-:
-0px
-;
-padding
-:
-10px
-8px
-6px
-8px
+transparent
 ;
 margin
 -
 top
 :
 -
-3px
+4px
 ;
--
-moz
--
 margin
 -
-start
+left
 :
-11px
-;
-color
-:
-#
-ffffff
+-
+13px
 ;
 min
 -
 width
 :
 280px
+;
+-
+moz
+-
+border
+-
+image
+:
+url
+(
+chrome
+:
+/
+/
+browser
+/
+skin
+/
+hud
+-
+panel
+.
+png
+)
+26
+18
+22
+50
+/
+26px
+18px
+22px
+50px
+repeat
 ;
 }
 #
@@ -17636,10 +17605,34 @@ appearance
 :
 none
 ;
+margin
+:
+4px
+3px
+2px
+-
+30px
+;
 color
 :
 #
 ffffff
+;
+}
+#
+identity
+-
+popup
+-
+content
+-
+box
+{
+margin
+-
+top
+:
+4px
 ;
 }
 /
@@ -17863,7 +17856,9 @@ padding
 ;
 margin
 :
-6px
+10px
+0
+0
 ;
 min
 -
