Bug 465475. Stop test iterations well in advance of reftest timeout. Test-only change.
UltraBlame original commit: 1a51935c654b7d1332d3a1554e143db104b9607b

--- a/layout/reftests/bugs/413292-1.html
+++ b/layout/reftests/bugs/413292-1.html
@@ -84,6 +84,14 @@ iframe
 >
 "
 ;
+var
+start
+=
+new
+Date
+(
+)
+;
 function
 ap
 (
@@ -165,16 +173,24 @@ src
 ;
 setTimeout
 (
-looop
+nextIteration
 pause
 )
 ;
 }
 function
-looop
+nextIteration
 (
 )
 {
+var
+now
+=
+new
+Date
+(
+)
+;
 loopCount
 +
 +
@@ -183,7 +199,14 @@ if
 (
 loopCount
 <
-10
+20
+&
+&
+now
+-
+start
+<
+5000
 )
 {
 ap
