--- a/browser/themes/pinstripe/browser/preferences/preferences.css
+++ b/browser/themes/pinstripe/browser/preferences/preferences.css
@@ -434,32 +434,6 @@ BLOCK
 *
 *
 /
-#
-BrowserPreferences
-:
-not
-(
-[
-active
-=
-"
-true
-"
-]
-)
->
-.
-paneSelector
->
-radio
-{
-opacity
-:
-0
-.
-7
-;
-}
 .
 prefWindow
 -
@@ -470,7 +444,6 @@ margin
 0
 12px
 8px
-12px
 ;
 }
 #
@@ -534,10 +507,8 @@ png
 ;
 padding
 :
-0
-5px
-2px
-5px
+1px
+4px
 ;
 -
 moz
@@ -558,32 +529,28 @@ margin
 0
 ;
 }
-.
-paneSelector
 radio
+[
+pane
+]
 {
 border
--
-right
 :
-2px
 solid
 transparent
 ;
 border
 -
-left
+width
 :
+0
 2px
-solid
-transparent
 ;
 padding
 :
 5px
-0
+4px
 3px
-0
 ;
 margin
 :
@@ -595,39 +562,38 @@ moz
 appearance
 :
 none
-!
-important
 ;
-}
-.
-paneButtonLabel
+text
 -
 shadow
-.
-paneButtonLabel
-{
-margin
 :
+rgba
+(
+255
+255
+255
 0
-;
-padding
-:
+.
+4
+)
+0
 1px
-6px
-0
-6px
 ;
 }
-.
-paneButtonLabel
+radio
+[
+pane
+]
+:
+active
+:
+hover
+{
+text
 -
 shadow
-{
-padding
--
-top
 :
-2px
+none
 ;
 }
 radio
@@ -642,7 +608,12 @@ true
 "
 ]
 {
-background
+-
+moz
+-
+border
+-
+image
 :
 url
 (
@@ -655,48 +626,87 @@ browser
 /
 skin
 /
-radio
+preferences
+/
+prefbutton
 -
-selected
--
-bg
+active
 .
 png
 "
 )
+0
+2
 repeat
--
-x
-center
-center
 ;
+}
+#
+BrowserPreferences
+:
+not
+(
+[
+active
+=
+"
+true
+"
+]
+)
+radio
+[
+pane
+]
+[
+selected
+=
+"
+true
+"
+]
+{
 -
 moz
 -
 border
 -
-left
--
-colors
+image
 :
-#
-6a6a6a
-#
-868686
+url
+(
+"
+chrome
+:
+/
+/
+browser
+/
+skin
+/
+preferences
+/
+prefbutton
+-
+inactive
+.
+png
+"
+)
+0
+2
+repeat
 ;
--
-moz
--
-border
--
-right
--
-colors
+}
+.
+paneButtonLabel
+{
+margin
 :
-#
-6a6a6a
-#
-868686
+0
+;
+padding
+:
+0
 ;
 }
 /
@@ -759,6 +769,8 @@ paneMain
 ]
 :
 active
+:
+hover
 {
 -
 moz
@@ -822,6 +834,8 @@ paneTabs
 ]
 :
 active
+:
+hover
 {
 -
 moz
@@ -886,6 +900,8 @@ paneContent
 ]
 :
 active
+:
+hover
 {
 -
 moz
@@ -950,6 +966,8 @@ paneApplications
 ]
 :
 active
+:
+hover
 {
 -
 moz
@@ -1014,6 +1032,8 @@ panePrivacy
 ]
 :
 active
+:
+hover
 {
 -
 moz
@@ -1078,6 +1098,8 @@ paneSecurity
 ]
 :
 active
+:
+hover
 {
 -
 moz
@@ -1142,6 +1164,8 @@ paneAdvanced
 ]
 :
 active
+:
+hover
 {
 -
 moz
